@@ -1,3 +1,5 @@
+- fix copying of ../../i586/media/main medium 
+  (for dual_arch CDs sharing the i586 medium)
 - fix configuring kdeglobals (was broken because of /etc/kderc using
   udpate-alternatives which use absolute symlinks)
 
